# data

./: .env.example  Cargo.toml
.github/workflows/: sync.yaml
data/: cardio.json  drem.json  hemato.json  histo_biof.json  ibcm.json  ibest.json  mc1.json  neuro.json  spyh.json
images/hemato/: 75a86779-f777-4fdb-81de-998571d3790c.avif
images/ibcm/: 049a6e0c-3a32-499e-9b4a-76ddd0c73d73.avif  0ae8d92a-0fce-4407-9759-7d8f5a941680.avif  12dd2e87-75a4-476b-b53b-f428c3e5b82f.avif  16b571ac-40a4-487c-9cb4-ac9ed6f99329.avif  1794e395-3cfa-45b3-bce2-c8f214621226.avif  191a19b2-006d-4f31-957b-9470ed0e4373.avif  29d4d872-d288-42d1-930f-f2182cb6e546.avif  33134855-ae18-45d6-8071-dc897f3269f6.avif  333df82e-ab55-4b80-99f6-435fdb741810.avif  368f61cb-7ec7-4fef-acb2-f4ef6062abc6.avif  391a54be-66de-49ff-9556-55121d6ef8b0.avif  3f2bb021-bde9-4124-bbfd-9deae85cd634.avif  455e46fe-6b57-439a-a110-849c0d76d511.avif  4d050466-589f-4a83-b28d-9fed2d63db5c.avif  4d8f559b-1bad-43a9-b127-d83964d3d329.avif  527a52a0-cc64-48db-9592-59912979a3ec.avif  544685ee-e1b0-4fd1-b2d5-dae23799e2da.avif  58a699cd-4de6-44dd-bcce-d3451a1c0818.avif  592d89ab-8749-4432-b8e6-70fe969622c9.avif  5d7389b4-4a96-49aa-ba67-3abd1002b905.avif  5eb3585f-1adb-41bd-9634-cd7514f79627.avif  6201fc0b-12ed-44dc-9e42-97e23fc7a52c.avif  747df9e4-7ff2-47a5-b3c0-7fe5612b7add.avif  7695a34f-6d51-423a-b8f0-22a8bde9d696.avif  7f64f716-7f14-424e-a490-c4939da320a5.avif  83879946-3222-4dc9-a6e2-320d9278c6e8.avif  882898ab-c48d-4dff-aae2-7bcea5c6c2fe.avif  895f186c-7f78-4973-a186-061b65e4123d.avif  95916c15-688f-42be-a895-b27625c59990.avif  a5487431-6fc5-48b8-bdae-3ac667ace365.avif  a7e189e4-5472-4d15-9d72-8b0c768787a1.avif  b0d7c9bc-8c3a-4293-a261-ee212463ad33.avif  b19f78b0-3657-4d67-a504-8a27626c5d25.avif  b7cc910f-6b1d-4f62-a3f1-45a23fd753bf.avif  cb5c87b2-81d2-40ec-985c-217e7ff697b2.avif  d6a36d00-9379-4486-83f2-7987c871830a.avif  df404740-3016-4a2e-ab9a-b4b85955366d.avif  e837f5ea-b5e8-4410-bea0-30f4ed7ad431.avif  eaee40df-656f-4c10-8c22-9a9bcbbedbb2.avif  fce4edc6-a390-4ad3-ae8b-4ac82fc808dd.avif  (+2 more)
images/ibest/: 036a5946-0e5d-45ff-8bd3-67655e7e97d2.avif  106b6230-2448-4530-8604-54752bafa96b.avif  13ba67fb-d891-4ba0-9c8b-f161a97d15ab.avif  14905967-1da2-44ab-b79b-1d861cc73d72.avif  17c97c05-3982-4aed-988e-a9a0daa73dbd.avif  1eb8b3e7-dcb0-495c-9961-2b4e83dbcf7f.avif  24259013-6dbd-4036-8f61-064aabc860b4.avif  2ca32246-4839-4f5c-98e7-0114c88c71e7.avif  4bae4ec0-065d-4493-8ef8-185f6abb2416.avif  56729f52-9a45-4e88-a5fd-7109dcc561df.avif  59690ea1-e4d2-48ed-a547-35e67799b313.avif  61c31fb2-b335-4887-aa3f-1745310f3ea8.avif  6c38c7ed-01f3-4efb-ab3f-464c0c238dd1.avif  716118fb-8ad2-4ebe-98e7-344b330b3483.avif  7abce021-5ea0-41ca-8d47-9f9fb60477fc.avif  804468ad-f875-47be-9a28-b37d3d69e912.avif  97b1d1b8-c107-48ee-81f1-e3543c8565e4.avif  b07192df-86ab-4a15-ae14-657db34a1f96.avif  d2ef7f71-9be9-4a69-8490-3189e4780afe.avif  e31a1d41-4dca-45a4-a14d-84a6cd14d036.avif  ead1235d-5f8f-4a88-8c85-b6f7bb84ec04.avif  f6cabefa-b6a6-4ec2-a1fc-429b879c304b.avif  ibest.avif
lib/: Cargo.toml
lib/src/: data.rs  hashable.rs  helpers.rs  lib.rs  raw_data.rs
src/: format.rs  main.rs  sync.rs
(+2 files in other folders)
