[workspace]
members = [".", "lib"]

[package]
name = "data-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive", "env", "wrap_help"] }
dotenvy = { version = "0.15.6", optional = true }
medici-data-sync = { path = "lib" }
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = [
    "rustls-tls",
    "json",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.2", features = ["std", "v4", "serde"] }

[features]
default = ["env-file"]
env-file = ["dotenvy"]
