[package]
name = "medici-data-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
blake3 = "1.3.1"
chrono = { version = "0.4.22", default-features = false, features = [
    "std",
    "serde",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["std", "v4", "serde"] }
