[package]
name = "medici-data-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
blake3 = "1.3.3"
chrono = { version = "0.4.23", default-features = false, features = [
    "std",
    "serde",
] }
once_cell = "1.16.0"
regex = "1.7.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["std", "v4", "serde"] }
